Sesion en Vivo 1901

--- a/sisfac/sisfac-web/src/main/webapp/WEB-INF/template.xhtml
+++ b/sisfac/sisfac-web/src/main/webapp/WEB-INF/template.xhtml
@@ -6,7 +6,7 @@
 	xmlns:p="http://primefaces.org/ui">
 
 <h:head>
-
+	<h:outputStylesheet library="css" name="sisfac.css"></h:outputStylesheet>
 </h:head>
 <h:body>
 	<p:layout fullPage="true">
