--- a/sisfac/sisfac-web/src/main/webapp/WEB-INF/template.xhtml
+++ b/sisfac/sisfac-web/src/main/webapp/WEB-INF/template.xhtml
@@ -11,7 +11,7 @@
 <h:body>
 	<p:layout fullPage="true">
 		<p:layoutUnit position="north" size="100" >
-			
+			<p:graphicImage library="img" name="headerTemplate.png" width="100%" height="80px"/>
 		</p:layoutUnit>
 
 		<p:layoutUnit position="south" size="100" header="Créditos"
