Actualización estilos generales y datatable

--- a/sisfac/sisfac-web/src/main/webapp/admin/producto.xhtml
+++ b/sisfac/sisfac-web/src/main/webapp/admin/producto.xhtml
@@ -26,7 +26,7 @@
 			</f:facet>
 		</p:toolbar>
 		<p:panelGrid id="panGriPro" columns="4">
-			<p:outputLabel value="Tipo Producto:" for="cmbTipPro" />
+			<p:outputLabel value="Tipo Producto:" for="cmbTipPro" styleClass="etiqueta"/>
 			<p:selectOneMenu id="cmbTipPro" required="true" effect="drop"
 				value="#{productoBean.producto.tipoProducto}"
 				converter="#{convTipPro}">
@@ -36,13 +36,13 @@
 					var="tipPro" itemLabel="#{tipPro.tipproNombre}"
 					itemValue="#{tipPro}" />
 			</p:selectOneMenu>
-			<p:outputLabel value="Nombre:" for="txtNomPro" />
+			<p:outputLabel value="Nombre:" for="txtNomPro" styleClass="etiqueta"/>
 			<p:inputText id="txtNomPro" required="true" maxlength="45"
 				value="#{productoBean.producto.proNombre}" />
-			<p:outputLabel value="Descripción:" for="txaDesPro" />
+			<p:outputLabel value="Descripción:" for="txaDesPro" styleClass="etiqueta"/>
 			<p:inputTextarea id="txaDesPro" required="true" maxlength="200"
 				rows="4" cols="50" value="#{productoBean.producto.proDescripcion}" />
-			<p:outputLabel value="Precio:" for="spiPrePro" />
+			<p:outputLabel value="Precio:" for="spiPrePro" styleClass="etiqueta"/>
 			<p:spinner id="spiPrePro" stepFactor="1" min="1"
 				value="#{productoBean.producto.proPrecio}" />
 		</p:panelGrid>
