--- a/sisfac/sisfac-web/src/main/webapp/WEB-INF/template.xhtml
+++ b/sisfac/sisfac-web/src/main/webapp/WEB-INF/template.xhtml
@@ -7,6 +7,7 @@
 
 <h:head>
 	<h:outputStylesheet library="css" name="sisfac.css"></h:outputStylesheet>
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> </link>
 </h:head>
 <h:body>
 	<p:layout fullPage="true">
